--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "cryptocompare": "^1.0.0",
+    "fuzzy": "^0.1.3",
     "lodash": "^4.17.14",
+    "lodash.pickby": "^4.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
