--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash.pickby": "^4.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-highcharts": "^16.1.0",
     "react-scripts": "3.0.1",
     "styled-components": "4.0.2"
   },
